--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,35 @@ apply plugin: 'idea'
 apply from: "./libraries.gradle"
 allprojects {
     repositories {
-    	mavenCentral()
     	mavenLocal()
-        mavenRepo name: 'jboss-nexus', url: "http://repository.jboss.org/nexus/content/groups/public/"
-        mavenRepo name: "jboss-snapshots", url: "http://snapshots.jboss.org/maven2/"
+		maven {
+            url 'https://repo.maven.apache.org/maven2/'
+        }
+        maven {
+            name 'jboss-nexus'
+            url "http://repository.jboss.org/nexus/content/groups/public/"
+        }
+        maven {
+            name "jboss-snapshots"
+            url "http://snapshots.jboss.org/maven2/"
+}
     }
 }
 
 buildscript {
     repositories {
-	    mavenCentral()
 	    mavenLocal()
-        mavenRepo name: 'jboss-nexus', url: "http://repository.jboss.org/nexus/content/groups/public/"
-        mavenRepo name: "jboss-snapshots", url: "http://snapshots.jboss.org/maven2/"
+		 maven {
+      url = 'https://repo.maven.apache.org/maven2'
+        }
+         maven {
+            name 'jboss-nexus'
+            url "http://repository.jboss.org/nexus/content/groups/public/"
+        }
+        maven {
+            name "jboss-snapshots"
+            url "http://snapshots.jboss.org/maven2/"
+}
     }
     dependencies {
         classpath 'org.hibernate.build.gradle:gradle-upload-auth-plugin:1.1.1'
