--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -28,9 +28,10 @@ apply plugin: 'idea'
 buildDir = "target"
 
 repositories {
-    mavenCentral()
     mavenLocal()
-    mavenRepo name: "jboss", url: "http://repository.jboss.org/nexus/content/groups/public/"
+    maven {
+            url 'https://repo.maven.apache.org/maven2/'
+        }
 }
 targetCompatibility = "1.6"
 sourceCompatibility = "1.6"
