--- a/documentation/documentation.gradle
+++ b/documentation/documentation.gradle
@@ -1,8 +1,18 @@
 buildscript {
   repositories {
-      mavenCentral()
       mavenLocal()
-	  mavenRepo name: 'jboss-nexus', url: "http://repository.jboss.org/nexus/content/groups/public/"
+	  maven {
+            url 'https://repo.maven.apache.org/maven2/'
+        } 
+      maven {
+            url 'https://repository.jboss.org/nexus/content/repositories/releases/'
+        }
+	  maven {
+            url 'https://nexus.pentaho.org/content/groups/omni/'
+        }
+		maven {
+            url 'https://maven.repository.redhat.com/ga/'
+        }
   }
   dependencies {
       classpath "org.jboss.jdocbook:gradle-jdocbook:1.2.2"
