--- a/hibernate-enhance-maven-plugin/hibernate-enhance-maven-plugin.gradle
+++ b/hibernate-enhance-maven-plugin/hibernate-enhance-maven-plugin.gradle
@@ -6,7 +6,9 @@ import org.apache.tools.ant.filters.ReplaceTokens
 group = 'org.hibernate.orm.tooling'
 
 repositories {
-    mavenCentral()
+    maven {
+            url 'https://repo.maven.apache.org/maven2/'
+        }
 }
 
 processResources.doLast {
