--- a/hibernate-gradle-plugin/hibernate-gradle-plugin.gradle
+++ b/hibernate-gradle-plugin/hibernate-gradle-plugin.gradle
@@ -26,7 +26,9 @@ apply plugin: 'maven'
 apply plugin: 'java'
 
 repositories {
-    mavenCentral()
+    maven {
+            url 'https://repo.maven.apache.org/maven2/'
+        }
 }
 
 dependencies {
